@@ -1,17 +1,0 @@
-# Copyright 1999-2013 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SFTP-Foreign/Net-SFTP-Foreign-1.730.0.ebuild,v 1.3 2013/07/10 05:18:40 ago Exp $
-
-EAPI=4
-
-MODULE_AUTHOR=SALVA
-MODULE_VERSION=1.73
-inherit perl-module
-
-DESCRIPTION="Net::SFTP::Foreign, Secure File Transfer Protocol client"
-
-SLOT="0"
-KEYWORDS="amd64 ~hppa ~sparc x86"
-IUSE=""
-
-#SRC_TEST=do
