@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Net-SFTP-Foreign
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SFTP-Foreign/ChangeLog,v 1.8 2014/08/22 19:43:44 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SFTP-Foreign/ChangeLog,v 1.9 2014/10/12 07:29:38 zlogene Exp $
+
+  12 Oct 2014; Mikle Kolyada <zlogene@gentoo.org>
+  -Net-SFTP-Foreign-1.730.0.ebuild:
+  Drop old.
 
 *Net-SFTP-Foreign-1.750.0-r1 (22 Aug 2014)
 
